--- a/.github/workflows/1-infra-deploy-destroy.yml
+++ b/.github/workflows/1-infra-deploy-destroy.yml
@@ -1,4 +1,4 @@
-name: 1 - Deploy/Destroy Infrastructure (Terraform)
+name: 1 - Déploiement/Destruction de l'Infrastructure (Terraform)
 
 # -----------------------------------------------------------------------
 # Ce workflow gère le déploiement et la destruction de l'infrastructure AWS via Terraform.
@@ -40,7 +40,7 @@ env:
 
 jobs:
   terraform:
-    name: 'Terraform ${{ github.event.inputs.action }}'
+    name: 'Terraform ${{ github.event.inputs.action }} (Infrastructure)'
     runs-on: ubuntu-latest
     defaults:
       run:
