--- a/.github/workflows/3-docker-build-deploy.yml
+++ b/.github/workflows/3-docker-build-deploy.yml
@@ -23,8 +23,14 @@ on:
           - monitoring
 
 jobs:
+  # Vérification des secrets avant de continuer
+  check-secrets:
+    name: 'Vérification des secrets'
+    uses: ./.github/workflows/0-verification-secrets.yml
+
   build-and-push:
     if: ${{ github.event.inputs.action == 'build' || github.event.inputs.action == 'both' }}
+    needs: [check-secrets]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -36,7 +42,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Set version
@@ -55,8 +61,8 @@ jobs:
           file: ./app-react/Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }}
-            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:mobile-latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:mobile-${{ env.VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:mobile-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -68,8 +74,8 @@ jobs:
           context: ./scripts/config/grafana
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }}
-            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:grafana-latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:grafana-${{ env.VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:grafana-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -81,8 +87,8 @@ jobs:
           context: ./scripts/config/prometheus
           push: true
           tags: |
-            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }}
-            ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:prometheus-latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:prometheus-${{ env.VERSION }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:prometheus-latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -101,15 +107,15 @@ jobs:
 
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "mobile" ]]; then
             echo "Scanning mobile app image..."
-            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:mobile-${{ env.VERSION }} > mobile-scan.txt
+            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:mobile-${{ env.VERSION }} > mobile-scan.txt
           fi
 
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "monitoring" ]]; then
             echo "Scanning Grafana image..."
-            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:grafana-${{ env.VERSION }} > grafana-scan.txt
+            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:grafana-${{ env.VERSION }} > grafana-scan.txt
 
             echo "Scanning Prometheus image..."
-            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKER_USERNAME }}/yourmedia-ecf:prometheus-${{ env.VERSION }} > prometheus-scan.txt
+            trivy image --exit-code 0 --severity HIGH,CRITICAL --ignore-unfixed ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}:prometheus-${{ env.VERSION }} > prometheus-scan.txt
 
 
           fi
@@ -234,11 +240,9 @@ jobs:
       - name: Deploy monitoring containers
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'monitoring' }}
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-          DOCKER_REPO: ${{ secrets.DOCKER_REPO || 'yourmedia-ecf' }}
-          DOCKERHUB_REPO: ${{ secrets.DOCKER_REPO || 'yourmedia-ecf' }}
+          DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}
           TF_MONITORING_EC2_PUBLIC_IP: ${{ secrets.TF_MONITORING_EC2_PUBLIC_IP }}
           GRAFANA_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
@@ -259,11 +263,9 @@ jobs:
       - name: Deploy app containers
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'mobile' }}
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-          DOCKER_REPO: ${{ secrets.DOCKER_REPO || 'yourmedia-ecf' }}
-          DOCKERHUB_REPO: ${{ secrets.DOCKER_REPO || 'yourmedia-ecf' }}
+          DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}
           TF_EC2_PUBLIC_IP: ${{ secrets.TF_EC2_PUBLIC_IP }}
           EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           EC2_SSH_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
@@ -289,6 +291,7 @@ jobs:
   # Job de déploiement uniquement (pour l'action 'deploy')
   deploy:
     if: ${{ github.event.inputs.action == 'deploy' }}
+    needs: [check-secrets]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -305,11 +308,9 @@ jobs:
       - name: Deploy monitoring containers
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'monitoring' }}
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-          DOCKER_REPO: ${{ secrets.DOCKER_REPO || 'yourmedia-ecf' }}
-          DOCKERHUB_REPO: ${{ secrets.DOCKER_REPO || 'yourmedia-ecf' }}
+          DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}
           TF_MONITORING_EC2_PUBLIC_IP: ${{ secrets.TF_MONITORING_EC2_PUBLIC_IP }}
           GRAFANA_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
@@ -330,11 +331,9 @@ jobs:
       - name: Deploy app containers
         if: ${{ github.event.inputs.target == 'all' || github.event.inputs.target == 'mobile' }}
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-          DOCKER_REPO: ${{ secrets.DOCKER_REPO || 'yourmedia-ecf' }}
-          DOCKERHUB_REPO: ${{ secrets.DOCKER_REPO || 'yourmedia-ecf' }}
+          DOCKERHUB_REPO: ${{ secrets.DOCKERHUB_REPO || 'yourmedia-ecf' }}
           TF_EC2_PUBLIC_IP: ${{ secrets.TF_EC2_PUBLIC_IP }}
           EC2_SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           EC2_SSH_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
