--- a/.github/workflows/5-docker-cleanup.yml
+++ b/.github/workflows/5-docker-cleanup.yml
@@ -1,4 +1,4 @@
-name: 5 - Docker Images Cleanup
+name: 5 - Nettoyage des Images Docker
 
 # -----------------------------------------------------------------------
 # Ce workflow gère le nettoyage des images Docker Hub.
@@ -25,8 +25,15 @@ on:
         type: boolean
 
 jobs:
+  # Vérification des secrets avant de continuer
+  check-secrets:
+    name: 'Vérification des secrets'
+    uses: ./.github/workflows/0-verification-secrets.yml
+
   cleanup:
     name: 'Nettoyage des images Docker Hub'
+    needs: [check-secrets]
+    if: needs.check-secrets.outputs.status == 'success'
     runs-on: ubuntu-latest
 
     steps:
@@ -50,18 +57,18 @@ jobs:
         run: |
           cat > cleanup-docker-images.sh << 'EOF'
           #!/bin/bash
-          
+
           # Variables
           REPOSITORY=$1
           TAG_PATTERN=$2
           DRY_RUN=$3
-          
+
           # Fonction pour supprimer une image Docker Hub
           delete_image() {
             local repo=$1
             local tag=$2
             local dry_run=$3
-            
+
             if [ "$dry_run" = "true" ]; then
               echo "[SIMULATION] Suppression de l'image $repo:$tag"
             else
@@ -74,33 +81,33 @@ jobs:
               fi
             fi
           }
-          
+
           # Récupérer le token d'authentification Docker Hub
           echo "Récupération du token Docker Hub..."
           DOCKER_TOKEN=$(curl -s -H "Content-Type: application/json" -X POST -d '{"username": "'$DOCKER_USERNAME'", "password": "'$DOCKER_PASSWORD'"}' https://hub.docker.com/v2/users/login/ | jq -r .token)
-          
+
           if [ -z "$DOCKER_TOKEN" ] || [ "$DOCKER_TOKEN" = "null" ]; then
             echo "❌ Échec de l'authentification Docker Hub"
             exit 1
           fi
-          
+
           echo "✅ Authentification Docker Hub réussie"
-          
+
           # Récupérer la liste des tags
           echo "Récupération des tags pour le dépôt $REPOSITORY..."
           TAGS=$(curl -s -H "Authorization: Bearer $DOCKER_TOKEN" "https://hub.docker.com/v2/repositories/$REPOSITORY/tags?page_size=100" | jq -r '.results[].name')
-          
+
           if [ -z "$TAGS" ]; then
             echo "Aucun tag trouvé pour le dépôt $REPOSITORY"
             exit 0
           fi
-          
+
           echo "Tags trouvés:"
           echo "$TAGS"
-          
+
           # Supprimer les images selon le motif
           echo "Suppression des images correspondant au motif: $TAG_PATTERN"
-          
+
           if [ "$TAG_PATTERN" = "all" ]; then
             # Supprimer toutes les images
             for tag in $TAGS; do
@@ -114,10 +121,10 @@ jobs:
               fi
             done
           fi
-          
+
           echo "Nettoyage terminé"
           EOF
-          
+
           chmod +x cleanup-docker-images.sh
 
       # Étape 5: Exécution du script de nettoyage
@@ -129,7 +136,7 @@ jobs:
           # Installation de jq pour le traitement JSON
           sudo apt-get update
           sudo apt-get install -y jq
-          
+
           # Exécution du script de nettoyage
           ./cleanup-docker-images.sh "${{ github.event.inputs.repository }}" "${{ github.event.inputs.tag_pattern }}" "${{ github.event.inputs.dry_run }}"
 
@@ -140,7 +147,7 @@ jobs:
           echo "* **Dépôt:** ${{ github.event.inputs.repository }}" >> $GITHUB_STEP_SUMMARY
           echo "* **Motif de tag:** ${{ github.event.inputs.tag_pattern }}" >> $GITHUB_STEP_SUMMARY
           echo "* **Mode simulation:** ${{ github.event.inputs.dry_run }}" >> $GITHUB_STEP_SUMMARY
-          
+
           if [ "${{ github.event.inputs.dry_run }}" = "true" ]; then
             echo "* **Statut:** Simulation terminée ✅" >> $GITHUB_STEP_SUMMARY
             echo "* **Note:** Aucune image n'a été supprimée. Exécutez à nouveau avec 'Mode simulation' défini sur 'false' pour supprimer réellement les images." >> $GITHUB_STEP_SUMMARY
