--- a/app-react/package.json
+++ b/app-react/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "expo export --platform web",
+    "build": "expo export --platform web --output-dir dist",
     "amplify:install": "npm install && npm install @expo/metro-runtime@~4.0.1"
   },
   "dependencies": {
